<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="lista_mundacas_versao">
    ● Adeus bugs? Essa versão traz uma série de correção de bugs, alguns mais graves outros menores mas que já estavam aí faz um tempo.
        Espero que sua experiência seja a melhor possível dentro do app e se tiver alguma sugestão sinta-se
        à vontade para falar conosco através dos meios dentro do app.
        \n\n● Correção da falha que causava o fechamento do app após a inserção dos nomes da IA e do usuário;
        \n\n● Corrigido bug ao tentar ativar a vibração em alguns aparelhos;
        \n\n● Corrigido falha ao tentar esconder o teclado após o envio de uma mensagem;
        \n\n● Acompanhando a série no YouTube você fica por dentro das novas funções ainda em teste 😎
    </string>
    <string name="app_name">Amadeus</string>
    <string name="app_dev">Paradoxo Studios</string>
    <string name="app_dev1">Junior Obom</string>
    <string name="nav_header_title">Paradoxo Studios</string>
    <string name="nav_header_subtitle">Projeto Amadeus</string>
    <string name="nav_header_desc">Navegation Drawer</string>
    <string name="bem_vindo">Bem vindo à Amadeus</string>
    <string name="moldar_as_coisas">Antes de mais nada vamos moldar as coisas a sua maneira</string>
    <string name="btn_link_start">Link Start!</string>
    <string name="btn_load">Load</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_um_nome_para_ia">Digite um nome para IA</string>
    <string name="digite_algo">Digite algo</string>
    <string name="resposta_nao_localizada">Não sei o que dizer sobre isso, ainda estou em fase de aprendizado 😅</string>
    <string name="resposta_gravada">Resposta gravada com sucesso!</string>
    <string name="pergunta">Pergunta:</string>
    <string name="resposta">Resposta:</string>
    <string name="perfil">Perfil</string>
    <string name="editar_respostas">Editar respostas</string>
    <string name="configs">Configurações</string>
    <string name="compartilhe">Compartilha aí jovem</string>
    <string name="relatar_problema">Relatar problema</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="pref_titulo_ativar_voz_ia">Ativar voz da IA</string>
    <string name="pref_descri_ativar_voz_ia">Quando ativado faz com que todas falas da IA sejam ditadas em voz alta</string>
    <string name="pref_descri_ativar_voz_ia_sem_resposta">Quando ativado permite que a fala da IA funcione mesmo que uma resposta ainda não tenha sido apredida ou uma ação encontrada</string>
    <string-array name="intencoes_abrir_app">
        <item>abrir</item>
        <item>abrir aplicativo</item>
        <item>abrir app</item>
        <item>iniciar o aplicativo</item>
    </string-array>
    <string-array name="intencoes_tocar_musica_aleatoria">
        <item>toque uma música</item>
        <item>tocar uma música</item>
        <item>ouvir música</item>
        <item>ouvir uma música</item>
    </string-array>
    <string-array name="intencoes_tocar_musica_especifica">
        <item>tocar</item>
        <item>toque</item>
    </string-array>
    <string-array name="intencoes_parar_musica">
        <item>parar música</item>
        <item>pare a música</item>
    </string-array>
    <string-array name="intencoes_parar_segundo_plano">
        <item>parar segundo plano</item>
        <item>parar background</item>
        <item>cala a boca</item>
    </string-array>
    <string-array name="saudacoes_primarias">
        <item>bom dia</item>
        <item>boa noite</item>
        <item>boa tarde</item>
        <item>boa madrugada</item>
    </string-array>
    <string-array name="saudacoes_secundarias">
        <item>bem vindo de volta</item>
        <item>olá de novo</item>
        <item>olá novamente</item>
    </string-array>
    <string-array name="respostas_positivas">
        <item>sim</item>
        <item>ss</item>
        <item>claro</item>
        <item>com certeza</item>
        <item>pode crer</item>
        <item>pode ser</item>
    </string-array>
    <string-array name="respostas_negativas">
        <item>não</item>
        <item>n</item>
        <item>nop</item>
        <item>com certeza não</item>
        <item>claro que não</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar_excluir">Confirmar exclusão</string>
    <string name="erro_apagar_msg">Erro ao deletar mensagem</string>
    <string name="msg_deletada_sucesso">Mensagem deletada com sucesso</string>
    <string name="nenhuma_resposta_gravada">Você não tem nenhuma resposta gravada atualmente</string>
    <string name="preencha_tudo">Por favor preencha todos dados antes de continuar</string>
    <string name="resposta_atualizada">Resposta atualizada com sucesso!</string>
    <string name="texto_voz">Texto e voz</string>
    <string name="reiniciar">Reiniciar agora?</string>
    <string name="alteracao_realizada">Para aplicar as mudanças é necessario reiniciar o app, desja fazer isso agora?</string>
    <string name="reiniciar_depois">Depois</string>
    <string name="agora">Agora</string>
    <string name="exportar_importar">Importar e Exportar</string>
    <string name="qpython">QPython</string>
    <string name="geral">Geral</string>
    <string name="import_qpython">Importar do protótipo Qpython</string>
    <string name="import_qpython_info">Se você possui um versão original da IA feita em Python pode importar suas informações para usar neste app. Para isso selecione o caminho do arquivo infos.txt e clique em no botao Load abaixo</string>
    <string name="import_de">Importar de</string>
    <string name="caminho_import">/storage/0/qpython/IA Doxo/infos.txt</string>
    <string name="arquivo_nao_compat">Arquivo selecionado não é compatível, tente novamente</string>
    <string name="arquivo_nao_loc">Arquivo não localizado, clique aqui para procurar</string>
    <string name="arquivo_nao_sele">Nenhum arquivo selecionado</string>
    <string name="realmente_fazer_isso">Deseja realmente fazer isso?</string>
    <string name="tem_certeza">Ao fazer isso os dados já gravados nessa versão do app serão perdidos, deseja continuar?</string>
    <string name="importando_arq">Importando arquivos</string>
    <string name="import_sucesso">Importação realizada com sucesso</string>
    <string name="import_falha">Ocorreu algum erro durante a importação</string>
    <string name="de">de</string>
    <string name="sicronizando">Sincronizando</string>
    <string name="acesso_requerido">Acesso a memória interna é requerido para acessar essa tela</string>
    <string name="sugerir_ideia">Sugerir ideia</string>
    <string name="report_bug">Reportar um problema</string>
    <string name="report_bug_digite">Descreva o erro que você viu:</string>
    <string name="report_ideia">Sugerir uma ideia</string>
    <string name="report_ideia_digite">Paradoxo eu tenho uma ideia para o projeto que é assim:</string>
    <string name="sobre">Sobre</string>
    <string name="texto_sobre">No nosso canal do YouTube você pode conferir diversos vídeos sobre o projeto, sugerir melhorias junto com a galera e  ficar por dentro das novidades em desenvolvimento de cada atualização.</string>
    <string name="ir_yt">IR PARA O YOUTUBE</string>
    <string name="place_msg_pergunta_desc">Uma pergunta aqui pergunta aqui que poder ser bem grande por isso toda essa digitação desnecessária</string>
    <string name="historico">histórico</string>
    <string name="versao">Versão</string>
    <string name="oq_mudou">O que mudou nessa versão</string>
    <string name="clique_para_ensinar">\nClique e segure na mensagem anterior para ensinar uma resposta</string>
    <string name="texto_para_compartilhamento"><![CDATA[Conheça a inteligência artificial Amadeus:\nhttps://play.google.com/store/apps/details?id=com.paradoxo.amadeus&hl=pt_BR]]></string>
    <string name="compartilhar_com">Compartilhar com</string>
    <string name="pref_titulo_ativar_voz_ia_sem_resposta">Permitir fala para respostas não encontradas</string>
    <string name="acompanhe_no_yt">Acompanhe no YouTube</string>
    <string name="link_playlist_amadeus_yt">https://www.youtube.com/playlist?list=PLgkr0bcGnH6YtPQO1774MBPhJB4tVBk8L</string>
    <string name="descri_img">Descrição default imagem</string>
    <string name="nuvem">Nuvem</string>
    <string name="meus_bancos">Meus bancos</string>
    <string name="disponibilizar_online">Disponibilizar online</string>
    <string name="mais_infos">Mais informações</string>
    <string name="escolha_nome_banco">Nome do banco</string>
    <string name="enviar">ENVIAR</string>
    <string name="nome_banco_nao_nulo">O nome do banco não pode ser nulo</string>
    <string name="banco_vair_ficar_online">Seu banco ficará disponível online para outros usuários</string>
    <string name="login_requirido">É necessário logar para continuar</string>
    <string name="fazendo_upload">Iniciando upload</string>
    <string name="falha_upload">Falha no upload</string>
    <string name="sucesso_upload">Upload realizado com sucesso</string>
    <string name="fazendo_download">Iniciando download</string>
    <string name="falha_download">Falha no download, tente novamente</string>
    <string name="sucesso_download">Download concluído com sucesso</string>
    <string name="baixar">Baixar</string>
    <string name="deseja_baixar_esse_banco">Deseja baixar esse banco para que ele possa seja usada em suas cconversas?</string>
    <string name="acesso_memoria_para_download">É necessário acesso ao armazenamento para realizar downloads</string>
    <string name="excluir">Excluir</string>
    <string name="deslogar">Deslogar</string>
    <string name="logar">Logar</string>
    <string name="escolha_nome_usu">Escolha um nome de usuário</string>
    <string name="nome_usu_infos">Esse nome será exibido publicamente nos bancos que você postar</string>
    <string name="digite_verifique">Digite um nome e verifique a disponibilidade</string>
    <string name="confirmar">Confirmar</string>
    <string name="esse_nome_esta_disponivel">Esse nome está disponível</string>
    <string name="esse_nome_nao_disponivel">Esse nome não está disponível</string>
    <string name="verificar">verificar</string>
    <string name="substituir_padrao">Definir como banco padrão</string>
    <string name="adicionar_ao_padrao">Tornar parte do banco atual</string>
    <string name="substituir">Substituir</string>
    <string name="adicionar">Adicionar</string>
    <string name="concluido">Concluído</string>
    <string name="selecao_nao_texto">A seleção não foi de um texto</string>
    <string name="erro_importacao">Erro ao realizar importação</string>
    <string name="aguarde" tools:ignore="Typos">Aguarde um momento…</string>
    <string name="carregando_banco">Carregando banco</string>
    <string name="Atualizar">Atualizar</string>
    <string name="gravando_dados">Gravando dados…</string>
    <string name="selecione_infos_txt">Selecione o arquivo \"infos.txt\"</string>
    <string name="falha_envio_email">Falha ao enviar o e-mail</string>
    <string name="email_suporte">paradoxostudiossuporte@gmail.com</string>
    <string name="banco_instalado">O banco modificado foi instalado</string>
    <string name="reiniciando_app">Reiniciado app</string>
    <string name="falha_ao_copiar_banco">Erro na cópia do banco</string>
    <string name="acessar">Acessar</string>
    <string name="gerenciar_seus_bancos">Você pode gerenciar os bancos baixados na guia \"Meus Bancos\"</string>
    <string name="banco_interno_em_uso" tools:ignore="Typos">Banco de dados interno Está em uso neste momento</string>
    <string name="opiniao">Opinião</string>
    <string name="trocar_voz">Trocar voz</string>
</resources>