<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="@string/escolha_nome_usu"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/cinza7"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/conteudoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/nome_usu_infos"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/cinza4" />

            <EditText
                android:id="@+id/escolhaNomeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margem_activity"
                android:hint="@string/digite_verifique"
                android:minHeight="@dimen/margem_activity"
                tools:ignore="Autofill,TextFields" />

            <ProgressBar
                android:id="@+id/barraProgressoProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/azul_link"
                tools:text="O nome Paradoxo está disponível" />

        </LinearLayout>


        <Button
            android:id="@+id/confirmarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/cinza4"
            android:gravity="bottom"
            android:padding="@dimen/margem_activity"
            android:text="@string/verificar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>